# libp2p-hs

./: .dockerignore  .gitignore  .hlint.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  cabal.project  docker-compose.cross.yml  docker-compose.gossipsub.yml  docker-compose.yml  fourmolu.yaml  libp2p-hs.cabal
.github/workflows/: ci.yml  haddock.yml  interop.yml
docs/: 01-overview.md  02-peer-identity.md  03-addressing.md  04-transports.md  05-secure-channels.md  06-multiplexing.md  07-protocols.md  08-switch.md  09-dht.md  10-nat-traversal.md  11-pubsub.md  12-connection-flow.md  INDEX.md
interop/: Main.hs  Makefile  RESULTS.md
interop/rust-peer/: Cargo.toml  Dockerfile
interop/rust-peer/src/: main.rs
src/: LibP2P.hs
src/LibP2P/: DHT.hs  Multiaddr.hs  Switch.hs  Transport.hs
src/LibP2P/Core/: Binary.hs  Multihash.hs  Varint.hs
src/LibP2P/Crypto/: ECDSA.hs  Ed25519.hs  Key.hs  PeerId.hs  Protobuf.hs  RSA.hs  Secp256k1.hs  SignedEnvelope.hs
src/LibP2P/DHT/: Distance.hs  Lookup.hs  Message.hs  RoutingTable.hs  Types.hs
src/LibP2P/Multiaddr/: Codec.hs  Protocol.hs
src/LibP2P/MultistreamSelect/: Negotiation.hs  Wire.hs
src/LibP2P/Mux/Yamux/: Frame.hs  Session.hs  Stream.hs  Types.hs
src/LibP2P/NAT/: AutoNAT.hs  DCUtR.hs  Relay.hs
src/LibP2P/NAT/AutoNAT/: Message.hs
src/LibP2P/NAT/DCUtR/: Message.hs
src/LibP2P/NAT/Relay/: Client.hs  Message.hs
src/LibP2P/Noise/: Framing.hs  Handshake.hs  Session.hs
src/LibP2P/Protocol/: Identify.hs  Ping.hs
src/LibP2P/Protocol/GossipSub/: Handler.hs  Heartbeat.hs  Message.hs  MessageCache.hs  Router.hs  Score.hs  Types.hs
src/LibP2P/Protocol/Identify/: Message.hs
src/LibP2P/Security/Noise/: Framing.hs  Handshake.hs  Session.hs
src/LibP2P/Switch/: ConnPool.hs  Dial.hs  Listen.hs  ResourceManager.hs  Types.hs  Upgrade.hs
src/LibP2P/Transport/: TCP.hs
src/LibP2P/Yamux/: Frame.hs  Session.hs  Stream.hs  Types.hs
src/Network/: LibP2P.hs
src/Network/LibP2P/: DHT.hs  Multiaddr.hs  Switch.hs  Transport.hs
src/Network/LibP2P/Core/: Base58.hs  Binary.hs  Multihash.hs  Varint.hs
src/Network/LibP2P/Crypto/: ECDSA.hs  Ed25519.hs  Key.hs  PeerId.hs  Protobuf.hs  RSA.hs  Secp256k1.hs  SignedEnvelope.hs
src/Network/LibP2P/DHT/: DHT.hs  Distance.hs  Lookup.hs  Message.hs  RoutingTable.hs  Types.hs
src/Network/LibP2P/Multiaddr/: Codec.hs  Multiaddr.hs  Protocol.hs
src/Network/LibP2P/MultistreamSelect/: Negotiation.hs  Wire.hs
src/Network/LibP2P/Mux/Yamux/: Frame.hs  Session.hs  Stream.hs  Types.hs
src/Network/LibP2P/NAT/: AutoNAT.hs  DCUtR.hs  Relay.hs
src/Network/LibP2P/NAT/AutoNAT/: AutoNAT.hs  Message.hs
src/Network/LibP2P/NAT/DCUtR/: DCUtR.hs  Message.hs
src/Network/LibP2P/NAT/Relay/: Client.hs  Message.hs  Relay.hs
src/Network/LibP2P/Protocol/: Identify.hs  Ping.hs
src/Network/LibP2P/Protocol/GossipSub/: Handler.hs  Heartbeat.hs  Message.hs  MessageCache.hs  Router.hs  Score.hs  Types.hs
src/Network/LibP2P/Protocol/Identify/: Identify.hs  Message.hs
src/Network/LibP2P/Protocol/Ping/: Ping.hs
src/Network/LibP2P/Security/Noise/: Framing.hs  Handshake.hs  Session.hs
src/Network/LibP2P/Switch/: ConnPool.hs  Dial.hs  Listen.hs  ResourceManager.hs  Switch.hs  Types.hs  Upgrade.hs
src/Network/LibP2P/Transport/: TCP.hs  Transport.hs
test/LibP2P/: IntegrationSpec.hs
test/LibP2P/Core/: MultihashSpec.hs  VarintSpec.hs
test/LibP2P/Crypto/: ECDSASpec.hs  PeerIdSpec.hs  RSASpec.hs  Secp256k1Spec.hs  SignedEnvelopeSpec.hs
test/LibP2P/DHT/: DHTSpec.hs  DistanceSpec.hs  LookupSpec.hs  MessageSpec.hs  RoutingTableSpec.hs
test/LibP2P/Multiaddr/: MultiaddrSpec.hs
test/LibP2P/MultistreamSelect/: NegotiationSpec.hs
test/LibP2P/Mux/Yamux/: FrameSpec.hs  SessionSpec.hs  StreamSpec.hs
test/LibP2P/NAT/AutoNAT/: AutoNATSpec.hs  MessageSpec.hs
test/LibP2P/NAT/DCUtR/: DCUtRSpec.hs  MessageSpec.hs
test/LibP2P/NAT/Relay/: ClientSpec.hs  MessageSpec.hs  RelaySpec.hs
test/LibP2P/Noise/: HandshakeSpec.hs
test/LibP2P/Protocol/GossipSub/: HandlerSpec.hs  HeartbeatSpec.hs  MessageCacheSpec.hs  MessageSpec.hs  RouterSpec.hs  ScoreSpec.hs  TypesSpec.hs
test/LibP2P/Protocol/Identify/: IdentifySpec.hs  MessageSpec.hs
test/LibP2P/Protocol/Ping/: PingSpec.hs
test/LibP2P/Security/Noise/: HandshakeSpec.hs
test/LibP2P/Switch/: ConnPoolSpec.hs  DialSpec.hs  ListenImplSpec.hs  ListenSpec.hs  ResourceManagerSpec.hs  SwitchSpec.hs  UpgradeSpec.hs
test/LibP2P/Transport/: TCPSpec.hs
test/LibP2P/Yamux/: FrameSpec.hs  SessionSpec.hs  StreamSpec.hs
test/Test/LibP2P/: IntegrationSpec.hs
test/Test/LibP2P/Core/: MultihashSpec.hs  VarintSpec.hs
test/Test/LibP2P/Crypto/: ECDSASpec.hs  PeerIdSpec.hs  RSASpec.hs  Secp256k1Spec.hs  SignedEnvelopeSpec.hs
test/Test/LibP2P/DHT/: DHTSpec.hs  DistanceSpec.hs  LookupSpec.hs  MessageSpec.hs  RoutingTableSpec.hs
test/Test/LibP2P/Multiaddr/: MultiaddrSpec.hs
test/Test/LibP2P/MultistreamSelect/: NegotiationSpec.hs
test/Test/LibP2P/Mux/Yamux/: FrameSpec.hs  SessionSpec.hs  StreamSpec.hs
test/Test/LibP2P/NAT/AutoNAT/: AutoNATSpec.hs  MessageSpec.hs
test/Test/LibP2P/NAT/DCUtR/: DCUtRSpec.hs  MessageSpec.hs
test/Test/LibP2P/NAT/Relay/: ClientSpec.hs  MessageSpec.hs  RelaySpec.hs
test/Test/LibP2P/Protocol/GossipSub/: HandlerSpec.hs  HeartbeatSpec.hs  MessageCacheSpec.hs  MessageSpec.hs  RouterSpec.hs  ScoreSpec.hs  TypesSpec.hs
test/Test/LibP2P/Protocol/Identify/: IdentifySpec.hs  MessageSpec.hs
test/Test/LibP2P/Protocol/Ping/: PingSpec.hs
test/Test/LibP2P/Security/Noise/: HandshakeSpec.hs
test/Test/LibP2P/Switch/: ConnPoolSpec.hs  DialSpec.hs  ListenImplSpec.hs  ListenSpec.hs  ResourceManagerSpec.hs  SwitchSpec.hs  UpgradeSpec.hs
test/Test/LibP2P/Transport/: TCPSpec.hs
test/Test/Network/LibP2P/: IntegrationSpec.hs
test/Test/Network/LibP2P/Core/: MultihashSpec.hs  VarintSpec.hs
test/Test/Network/LibP2P/Crypto/: ECDSASpec.hs  PeerIdSpec.hs  RSASpec.hs  Secp256k1Spec.hs  SignedEnvelopeSpec.hs
test/Test/Network/LibP2P/DHT/: DHTSpec.hs  DistanceSpec.hs  LookupSpec.hs  MessageSpec.hs  RoutingTableSpec.hs
(+31 files in other folders)
