cabal-version:   3.0
name:            libp2p-hs
version:         0.1.0.0
synopsis:        Haskell implementation of the libp2p networking stack
description:
  A Haskell implementation of the libp2p modular peer-to-peer networking
  stack. Implements transport, security, multiplexing, and application
  protocols following the libp2p specification.
license:         MIT
license-file:    LICENSE
author:          adust09
maintainer:      adust09
category:        Network
build-type:      Simple
extra-doc-files: README.md
tested-with:     GHC == 9.10.1

common warnings
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
               -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

common lang
  default-language:   GHC2021
  default-extensions:
    OverloadedStrings
    StrictData

library
  import:          warnings, lang
  hs-source-dirs:  src
  exposed-modules:
    Network.LibP2P
    Network.LibP2P.Core.Binary
    Network.LibP2P.Core.Varint
    Network.LibP2P.Core.Multihash
    Network.LibP2P.Multiaddr.Multiaddr
    Network.LibP2P.Multiaddr.Protocol
    Network.LibP2P.Multiaddr.Codec
    Network.LibP2P.Crypto.Key
    Network.LibP2P.Crypto.Ed25519
    Network.LibP2P.Crypto.Protobuf
    Network.LibP2P.Crypto.PeerId
    Network.LibP2P.MultistreamSelect.Wire
    Network.LibP2P.MultistreamSelect.Negotiation
    Network.LibP2P.Mux.Yamux.Frame
    Network.LibP2P.Mux.Yamux.Types
    Network.LibP2P.Mux.Yamux.Stream
    Network.LibP2P.Mux.Yamux.Session
    Network.LibP2P.Transport.Transport
    Network.LibP2P.Transport.TCP
    Network.LibP2P.Switch.Types
    Network.LibP2P.Switch.ConnPool
    Network.LibP2P.Switch.Switch
    Network.LibP2P.Switch.Dial
    Network.LibP2P.Switch.Listen
    Network.LibP2P.Switch.Upgrade
    Network.LibP2P.Switch.ResourceManager
    Network.LibP2P.Protocol.Identify.Message
    Network.LibP2P.Protocol.Identify.Identify
    Network.LibP2P.Protocol.Ping.Ping
    Network.LibP2P.DHT.Types
    Network.LibP2P.DHT.Distance
    Network.LibP2P.DHT.RoutingTable
    Network.LibP2P.DHT.Message
    Network.LibP2P.DHT.DHT
    Network.LibP2P.DHT.Lookup
    Network.LibP2P.NAT.AutoNAT.Message
    Network.LibP2P.NAT.AutoNAT.AutoNAT
    Network.LibP2P.Crypto.SignedEnvelope
    Network.LibP2P.NAT.Relay.Message
    Network.LibP2P.NAT.Relay.Relay
    Network.LibP2P.NAT.Relay.Client
    Network.LibP2P.NAT.DCUtR.Message
    Network.LibP2P.NAT.DCUtR.DCUtR
    Network.LibP2P.Security.Noise.Framing
    Network.LibP2P.Security.Noise.Handshake
    Network.LibP2P.Security.Noise.Session
  build-depends:
    base        >= 4.18 && < 5,
    bytestring  >= 0.10 && < 0.13,
    binary      >= 0.8.9 && < 0.9,
    text        >= 1.2  && < 2.2,
    cacophony   >= 0.11 && < 0.12,
    crypton     >= 1.0   && < 1.1,
    memory      >= 0.18  && < 0.19,
    ppad-base58 >= 0.2  && < 0.3,
    iproute     >= 1.7  && < 1.8,
    network     >= 3.1  && < 3.3,
    time        >= 1.9  && < 2,
    stm         >= 2.4  && < 2.6,
    async       >= 2.2  && < 2.3,
    containers  >= 0.6  && < 0.8,
    proto3-wire >= 1.4  && < 1.5

test-suite libp2p-hs-test
  import:          warnings, lang
  type:            exitcode-stdio-1.0
  hs-source-dirs:  test
  main-is:         Spec.hs
  other-modules:
    Test.Network.LibP2P.Core.VarintSpec
    Test.Network.LibP2P.Core.MultihashSpec
    Test.Network.LibP2P.Multiaddr.MultiaddrSpec
    Test.Network.LibP2P.Crypto.PeerIdSpec
    Test.Network.LibP2P.MultistreamSelect.NegotiationSpec
    Test.Network.LibP2P.Mux.Yamux.FrameSpec
    Test.Network.LibP2P.Mux.Yamux.StreamSpec
    Test.Network.LibP2P.Mux.Yamux.SessionSpec
    Test.Network.LibP2P.Transport.TCPSpec
    Test.Network.LibP2P.Switch.ConnPoolSpec
    Test.Network.LibP2P.Switch.SwitchSpec
    Test.Network.LibP2P.Switch.DialSpec
    Test.Network.LibP2P.Switch.ListenSpec
    Test.Network.LibP2P.Switch.UpgradeSpec
    Test.Network.LibP2P.Switch.ResourceManagerSpec
    Test.Network.LibP2P.Protocol.Identify.MessageSpec
    Test.Network.LibP2P.Protocol.Identify.IdentifySpec
    Test.Network.LibP2P.Protocol.Ping.PingSpec
    Test.Network.LibP2P.Security.Noise.HandshakeSpec
    Test.Network.LibP2P.DHT.DistanceSpec
    Test.Network.LibP2P.DHT.RoutingTableSpec
    Test.Network.LibP2P.DHT.MessageSpec
    Test.Network.LibP2P.DHT.DHTSpec
    Test.Network.LibP2P.DHT.LookupSpec
    Test.Network.LibP2P.NAT.AutoNAT.MessageSpec
    Test.Network.LibP2P.NAT.AutoNAT.AutoNATSpec
    Test.Network.LibP2P.Crypto.SignedEnvelopeSpec
    Test.Network.LibP2P.NAT.Relay.MessageSpec
    Test.Network.LibP2P.NAT.Relay.RelaySpec
    Test.Network.LibP2P.NAT.Relay.ClientSpec
    Test.Network.LibP2P.NAT.DCUtR.MessageSpec
    Test.Network.LibP2P.NAT.DCUtR.DCUtRSpec
  build-depends:
    base       >= 4.18 && < 5,
    bytestring >= 0.10 && < 0.13,
    memory     >= 0.18 && < 0.19,
    text       >= 1.2  && < 2.2,
    libp2p-hs,
    time       >= 1.9 && < 2,
    async      >= 2.2 && < 2.3,
    stm        >= 2.4 && < 2.6,
    containers >= 0.6 && < 0.8,
    crypton    >= 1.0  && < 1.1,
    hspec      >= 2.11 && < 2.12,
    QuickCheck >= 2.14 && < 2.16
  build-tool-depends:
    hspec-discover:hspec-discover
