cabal-version:   3.0
name:            libp2p-hs
version:         0.1.0.0
synopsis:        Haskell implementation of the libp2p networking stack
description:
  A Haskell implementation of the libp2p modular peer-to-peer networking
  stack. Implements transport, security, multiplexing, and application
  protocols following the libp2p specification.
license:         MIT
license-file:    LICENSE
author:          adust09
maintainer:      adust09
category:        Network
build-type:      Simple
extra-doc-files: README.md
tested-with:     GHC == 9.10.1

common warnings
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
               -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

common lang
  default-language:   GHC2021
  default-extensions:
    OverloadedStrings
    StrictData

library
  import:          warnings, lang
  hs-source-dirs:  src
  exposed-modules:
    LibP2P
    LibP2P.Core.Binary
    LibP2P.Core.Varint
    LibP2P.Core.Multihash
    LibP2P.Multiaddr
    LibP2P.Multiaddr.Protocol
    LibP2P.Multiaddr.Codec
    LibP2P.Crypto.Key
    LibP2P.Crypto.Ed25519
    LibP2P.Crypto.RSA
    LibP2P.Crypto.Secp256k1
    LibP2P.Crypto.ECDSA
    LibP2P.Crypto.Protobuf
    LibP2P.Crypto.PeerId
    LibP2P.MultistreamSelect.Wire
    LibP2P.MultistreamSelect.Negotiation
    LibP2P.Mux.Yamux.Frame
    LibP2P.Mux.Yamux.Types
    LibP2P.Mux.Yamux.Stream
    LibP2P.Mux.Yamux.Session
    LibP2P.Transport
    LibP2P.Transport.TCP
    LibP2P.Switch.Types
    LibP2P.Switch.ConnPool
    LibP2P.Switch
    LibP2P.Switch.Dial
    LibP2P.Switch.Listen
    LibP2P.Switch.Upgrade
    LibP2P.Switch.ResourceManager
    LibP2P.Protocol.Identify.Message
    LibP2P.Protocol.Identify
    LibP2P.Protocol.Ping
    LibP2P.DHT.Types
    LibP2P.DHT.Distance
    LibP2P.DHT.RoutingTable
    LibP2P.DHT.Message
    LibP2P.DHT
    LibP2P.DHT.Lookup
    LibP2P.NAT.AutoNAT.Message
    LibP2P.NAT.AutoNAT
    LibP2P.Crypto.SignedEnvelope
    LibP2P.NAT.Relay.Message
    LibP2P.NAT.Relay
    LibP2P.NAT.Relay.Client
    LibP2P.NAT.DCUtR.Message
    LibP2P.NAT.DCUtR
    LibP2P.Security.Noise.Framing
    LibP2P.Security.Noise.Handshake
    LibP2P.Security.Noise.Session
    LibP2P.Protocol.GossipSub.Types
    LibP2P.Protocol.GossipSub.Message
    LibP2P.Protocol.GossipSub.Router
    LibP2P.Protocol.GossipSub.Score
    LibP2P.Protocol.GossipSub.MessageCache
    LibP2P.Protocol.GossipSub.Heartbeat
    LibP2P.Protocol.GossipSub.Handler
  build-depends:
    base        >= 4.18 && < 5,
    bytestring  >= 0.10 && < 0.13,
    binary      >= 0.8.9 && < 0.9,
    text        >= 1.2  && < 2.2,
    cacophony   >= 0.11 && < 0.12,
    crypton     >= 1.0   && < 1.1,
    crypton-x509 >= 1.7  && < 1.9,
    crypton-asn1-types >= 0.4 && < 0.5,
    crypton-asn1-encoding >= 0.9 && < 0.11,
    memory      >= 0.18  && < 0.19,
    ppad-base58 >= 0.2  && < 0.3,
    iproute     >= 1.7  && < 1.8,
    network     >= 3.1  && < 3.3,
    time        >= 1.9  && < 2,
    stm         >= 2.4  && < 2.6,
    async       >= 2.2  && < 2.3,
    containers  >= 0.6  && < 0.8,
    proto3-wire >= 1.4  && < 1.5,
    list-shuffle >= 1.0  && < 1.1

executable libp2p-interop
  import:          warnings, lang
  hs-source-dirs:  interop
  main-is:         Main.hs
  build-depends:
    base        >= 4.18 && < 5,
    bytestring  >= 0.10 && < 0.13,
    text        >= 1.2  && < 2.2,
    time        >= 1.9  && < 2,
    network     >= 3.1  && < 3.3,
    hedis       >= 0.15 && < 0.16,
    aeson       >= 2.1  && < 2.3,
    stm         >= 2.4  && < 2.6,
    libp2p-hs
  ghc-options: -threaded -rtsopts

test-suite libp2p-hs-test
  import:          warnings, lang
  type:            exitcode-stdio-1.0
  hs-source-dirs:  test
  main-is:         Spec.hs
  other-modules:
    LibP2P.Core.VarintSpec
    LibP2P.Core.MultihashSpec
    LibP2P.Multiaddr.MultiaddrSpec
    LibP2P.Crypto.PeerIdSpec
    LibP2P.Crypto.RSASpec
    LibP2P.Crypto.Secp256k1Spec
    LibP2P.Crypto.ECDSASpec
    LibP2P.MultistreamSelect.NegotiationSpec
    LibP2P.Mux.Yamux.FrameSpec
    LibP2P.Mux.Yamux.StreamSpec
    LibP2P.Mux.Yamux.SessionSpec
    LibP2P.Transport.TCPSpec
    LibP2P.Switch.ConnPoolSpec
    LibP2P.Switch.SwitchSpec
    LibP2P.Switch.DialSpec
    LibP2P.Switch.ListenSpec
    LibP2P.Switch.ListenImplSpec
    LibP2P.Switch.UpgradeSpec
    LibP2P.Switch.ResourceManagerSpec
    LibP2P.Protocol.Identify.MessageSpec
    LibP2P.Protocol.Identify.IdentifySpec
    LibP2P.Protocol.Ping.PingSpec
    LibP2P.Security.Noise.HandshakeSpec
    LibP2P.DHT.DistanceSpec
    LibP2P.DHT.RoutingTableSpec
    LibP2P.DHT.MessageSpec
    LibP2P.DHT.DHTSpec
    LibP2P.DHT.LookupSpec
    LibP2P.NAT.AutoNAT.MessageSpec
    LibP2P.NAT.AutoNAT.AutoNATSpec
    LibP2P.Crypto.SignedEnvelopeSpec
    LibP2P.NAT.Relay.MessageSpec
    LibP2P.NAT.Relay.RelaySpec
    LibP2P.NAT.Relay.ClientSpec
    LibP2P.NAT.DCUtR.MessageSpec
    LibP2P.NAT.DCUtR.DCUtRSpec
    LibP2P.Protocol.GossipSub.TypesSpec
    LibP2P.Protocol.GossipSub.MessageSpec
    LibP2P.Protocol.GossipSub.RouterSpec
    LibP2P.Protocol.GossipSub.ScoreSpec
    LibP2P.Protocol.GossipSub.MessageCacheSpec
    LibP2P.Protocol.GossipSub.HeartbeatSpec
    LibP2P.Protocol.GossipSub.HandlerSpec
    LibP2P.IntegrationSpec
  build-depends:
    base       >= 4.18 && < 5,
    bytestring >= 0.10 && < 0.13,
    memory     >= 0.18 && < 0.19,
    text       >= 1.2  && < 2.2,
    libp2p-hs,
    time       >= 1.9 && < 2,
    async      >= 2.2 && < 2.3,
    stm        >= 2.4 && < 2.6,
    containers >= 0.6 && < 0.8,
    crypton    >= 1.0  && < 1.1,
    ppad-base58 >= 0.2 && < 0.3,
    hspec      >= 2.11 && < 2.12,
    QuickCheck >= 2.14 && < 2.16
  build-tool-depends:
    hspec-discover:hspec-discover
