[package]
name = "rust-peer"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.54", features = ["tcp", "noise", "yamux", "gossipsub", "tokio", "macros", "ed25519"] }
tokio = { version = "1", features = ["full"] }
redis = "0.27"
serde_json = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
